# meta

./: .editorconfig  .gitignore  .isort.cfg  .meta.toml  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pre-commit-update.yml  pre-commit.yml  tests.yml
config/: .gitignore  README.rst  config-package.py  drop-legacy-python.py  meta-cfg-to-toml.py  multi-call.py  pyproject.toml  re-enable-actions.py  requirements.txt  set-branch-protection-rules.py  set_branch_protection_rules.py  update-python-support.py
config/buildout-recipe/: coveragerc  coveragerc.j2  packages.txt  setup.cfg  tests.yml  tox.ini  tox.ini.in  tox.ini.j2  tox.ini.jj2  travis.yml
config/c-code/: appveyor-publish.j2  coveragerc.j2  manylinux-install.sh.j2  packages.txt  tests-cache.j2  tests-download.j2  tests-strategy.j2  tests.yml.j2  tox.ini.j2
config/default/: MANIFEST.in  MANIFEST.in.j2  appveyor-publish.j2  appveyor.yml.j2  editorconfig  gitignore  gitignore.j2  pre-commit-config.yaml.j2  pre-commit.yml.j2  readthedocs.yaml.j2  setup.cfg  setup.cfg.j2  tests.yml.in  tests.yml.j2  tox-coverage-config.j2  tox-docs.j2  tox-envlist.j2  tox-lint.j2  tox-release-check.j2  tox-testenv.j2
config/pure-python/: MANIFEST.in  gitignore  packages.txt  setup.cfg  tests.yml  tox.ini  tox.ini.in  tox.ini.j2  tox.ini.jj2  travis.yml
config/pure-python-with-multiprocess/: coveragerc  packages.txt  tox.ini  travis.yml
config/pure-python-without-pypy/: MANIFEST.in  editorconfig  gitignore  packages.txt  setup.cfg  tox.ini  travis.yml
config/shared/: call.py  git.py  packages.py  path.py  toml_encoder.py
config/toolkit/: packages.txt  tox.ini.j2
config/zope-product/: packages.txt  tox.ini.j2
docs/: api.rst  conf.py  hacking.rst  helperscripts.rst  index.rst  narr.rst  othertopics.rst  requirements.txt
src/zope/meta/: __init__.py  config_package.py  multi_call.py  pep_420.py  re_enable_actions.py  set_branch_protection_rules.py  setup_to_pyproject.py  update_python_support.py
src/zope/meta/buildout-recipe/: packages.txt  pyproject_defaults.toml.j2  tox.ini.j2
src/zope/meta/c-code/: manylinux-install.sh.j2  packages.txt  pyproject_defaults.toml.j2  tests-cache.j2  tests-download-linux.j2  tests-download.j2  tests-strategy.j2  tests.yml.j2  tox.ini.j2
src/zope/meta/default/: CONTRIBUTING.md  MANIFEST.in.j2  editorconfig.txt  gitignore.j2  pre-commit-config.yaml.j2  pre-commit.yml.j2  pyproject_defaults.toml.j2  setup.cfg.j2  tests.yml.j2  tox-envlist.j2  tox-lint.j2  tox-release-check.j2  tox-testenv.j2
src/zope/meta/pure-python/: packages.txt  tox.ini.j2
src/zope/meta/shared/: call.py  packages.py  script_args.py
src/zope/meta/tests/: test_config_package.py  test_update_python_support.py
src/zope/meta/toolkit/: packages.txt  pyproject_defaults.toml.j2  tox.ini.j2
travis-ci-config/: README.rst  minimal-no-pypy.yml  minimal.yml
(+2 files in other folders)
