# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.meta"
version = "2.2.dev0"
description = "Helper functions for package management"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "check-python-versions",
    "Jinja2",
    "packaging",
    "pyupgrade",
    "requests",
    "tomlkit",
    "tox",
    "zest.releaser",
]
keywords = ["zope", "packaging"]

[project.scripts]
config-package = "zope.meta.config_package:main"
multi-call = "zope.meta.multi_call:main"
re-enable-actions = "zope.meta.re_enable_actions:main"
set-branch-protection-rules = "zope.meta.set_branch_protection_rules:main"
setup-to-pyproject = "zope.meta.setup_to_pyproject:main"
update-python-support = "zope.meta.update_python_support:main"
switch-to-pep420 = "zope.meta.pep_420:main"

[project.optional-dependencies]
test = ["zope.testrunner >= 6.4"]
docs = [
    "Sphinx",
    "furo",
]

[project.urls]
Documentation = "https://zopemeta.readthedocs.io"
Source = "https://github.com/zopefoundation/meta"
Issues = "https://github.com/zopefoundation/meta/issues"

[tool.coverage.run]
branch = true
source = ["zope.meta"]

[tool.coverage.report]
fail_under = 10
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}
